name:                ftp-upload-txt
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/evdhiggins/ftp-upload-txt#readme
author:              Evan Higgins
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable ftp-upload-txt
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       
      base >= 4.7 && < 5
      , ftp-client
      , bytestring
      , dotenv
      , directory
      , text
